// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yieldfrom array 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": YieldFrom {
        "kind": "yieldfrom",
        "value": Array {
          "items": Array [
            Number {
              "kind": "number",
              "value": "3",
            },
            Number {
              "kind": "number",
              "value": "4",
            },
          ],
          "kind": "array",
          "shortForm": true,
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`yieldfrom new 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": YieldFrom {
        "kind": "yieldfrom",
        "value": New {
          "arguments": Array [
            Array {
              "items": Array [
                Number {
                  "kind": "number",
                  "value": "5",
                },
                Number {
                  "kind": "number",
                  "value": "6",
                },
              ],
              "kind": "array",
              "shortForm": true,
            },
          ],
          "kind": "new",
          "what": ClassReference {
            "kind": "classreference",
            "name": "ArrayIterator",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`yieldfrom return 1`] = `
Program {
  "children": Array [
    Return {
      "expr": YieldFrom {
        "kind": "yieldfrom",
        "value": Call {
          "arguments": Array [],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "nine_ten",
            "resolution": "uqn",
          },
        },
      },
      "kind": "return",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`yieldfrom simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": YieldFrom {
        "kind": "yieldfrom",
        "value": Call {
          "arguments": Array [],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "from",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
